fixed z-index for mobile nav

--- a/sass/elements/_header.scss
+++ b/sass/elements/_header.scss
@@ -164,7 +164,7 @@
 
          img {
                 position: absolute;
-                z-index: 10;
+                z-index: 99999;
                 top: -26px;
                 
             }
